--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Icon Section Strats
     ======================== -->
     <div class="icons">
-        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-facebook"></i>
         <br>
         <i class="fab fa-twitter"></i>
         <br>
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
@@ -90,6 +90,36 @@
     </section>
     <!-- Banner Section Ends
     ======================== -->
+
+    <!-- Features Sections Starts
+    ============================= -->
+    <section id="features">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2 class="title">
+                        Our Features
+                    </h2>
+                    <p>Molestie augue a gravida vestibulum ante in faucibus orci luctus ultrices posuere aliquet vestibulum tincidunt Interdum malesuada faucibus.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-6 col-sm-12 col-12 order-lg-6 order-md-6">
+                    <img src="assets/images/img-2.png" alt="Image 2">
+                </div>
+                <div class="col-md-6 col-lg-6 col-sm-12 col-12">
+                    <div class="text">
+                        <span class="text-primary">1.</span>
+                        <h2>This is Improve Your Marketing business</h2>
+                        <p>Quisque vehicula volutpat egestas proin in risus augue tristique lamcper vitae morbi porttitor convallis erat.</p>
+                        <button class="btn btn-outline-primary">Learn More <i class="fas fa-arrow-right"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Features Section Ends
+    ========================== -->
     
     <!-- Font Awesome JS -->
     <script src="assets/js/all.min.js"></script>
