--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Lightan</title>
+    <!-- Icon For Title -->
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
     <!-- Font Awesome -->
@@ -32,7 +34,7 @@
     <!-- Header Section Starts
     ========================== -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent fixed-top">
+        <nav class="navbar navbar-expand-md navbar-light bg-light bg-transparent">
             <a class="navbar-brand logo" href="#"><img src="assets/images/logo-dark.png" alt="Brand Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,7 +49,7 @@
                         <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Testimonial</a>
@@ -57,9 +59,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -138,6 +137,85 @@
         </div>
     </section>
     <!-- Features Section Ends
+    ========================== -->
+
+    <!-- Services Section Starts
+    ============================ -->
+    <section id="services">
+        <div class="container">
+            <div class="title-div">
+                <h2 class="title">
+                    Our Services
+                </h2>
+                <p>Molestie augue a gravida vestibulum ante in faucibus orci luctus ultrices posuere aliquet vestibulum tincidunt Interdum malesuada faucibus.</p>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 col-12">
+                    <div class="wrapper">
+                        <div class="icon">
+                            <i class="fas fa-cube"></i>
+                        </div>
+                        <h3 class="text-primary">Creative Design</h3>
+                        <p>Fusce purus interdum erat molestieda id nibh suspendisse auctor lacus sit amet lobortis rhoncus.</p>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 col-12">
+                    <div class="wrapper">
+                        <div class="icon">
+                            <i class="fas fa-ruler-combined"></i>
+                        </div>
+                        <h3 class="text-primary">User Experience</h3>
+                        <p>Fusce purus interdum erat molestieda id nibh suspendisse auctor lacus sit amet lobortis rhoncus.</p>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12 col-lg-4 col-12">
+                    <div class="wrapper">
+                        <div class="icon">
+                            <i class="fas fa-desktop"></i>
+                        </div>
+                        <h3 class="text-primary">Customizability</h3>
+                        <p>Fusce purus interdum erat molestieda id nibh suspendisse auctor lacus sit amet lobortis rhoncus.</p>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-12 col-lg-4 col-12">
+                    <div class="wrapper">
+                        <div class="icon">
+                            <i class="fas fa-images"></i>
+                        </div>
+                        <h3 class="text-primary">Retina Ready</h3>
+                        <p>Fusce purus interdum erat molestieda id nibh suspendisse auctor lacus sit amet lobortis rhoncus.</p>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-lg-4 col-12">
+                    <div class="wrapper">
+                        <div class="icon">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <h3 class="text-primary">Fully Responsive</h3>
+                        <p>Fusce purus interdum erat molestieda id nibh suspendisse auctor lacus sit amet lobortis rhoncus.</p>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12 col-lg-4 col-12">
+                    <div class="wrapper">
+                        <div class="icon">
+                            <i class="fas fa-smile-beam"></i>
+                        </div>
+                        <h3 class="text-primary">Custom Support</h3>
+                        <p>Fusce purus interdum erat molestieda id nibh suspendisse auctor lacus sit amet lobortis rhoncus.</p>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Services Section Ends
     ========================== -->
     
     <!-- Font Awesome JS -->
