--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -224,30 +224,30 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12 col-12">
-                    <div class="wrapper wow animated fadeInLeft">
+                    <div class="wrapper">
                         <i class="fas fa-users"></i>
-                        <h1 class="counter"><span>10</span></h1>
+                        <span class="counter">10</span>
                         <h4>Years of Operation</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-12">
                     <div class="wrapper">
                         <i class="fas fa-thumbs-up"></i>
-                        <h1 class="counter">1500+</h1>
+                        <span class="counter">1500+</span>
                         <h4>Happy Customers</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-12">
                     <div class="wrapper">
                         <i class="fas fa-code"></i>
-                        <h1 class="counter">180+</h1>
+                        <span class="counter">180+</span>
                         <h4>Team Members</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-12">
                     <div class="wrapper">
                         <i class="fas fa-trophy"></i>
-                        <h1 class="counter">35</h1>
+                        <span class="counter">15</span>
                         <h4>Awards</h4>
                     </div>
                 </div>
@@ -271,26 +271,44 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="assets/images/img1.jpg" alt="First slide">
-                                <p>"Aenean vehicula neque turpis at dictum purus malesuada Aenean risus"</p>
-                                <h3>Donec eget cursus libero vivamus sceler pellentes suscipit neque dictum tempus velirit quam malesuada diam in fringilla purus accumsan exact original aliquam.</h3>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/images/img2.jpg" alt="Second slide">
-                                <p>"Aenean vehicula neque turpis at dictum purus malesuada Aenean risus"</p>
-                                <h3>Donec eget cursus libero vivamus sceler pellentes suscipit neque dictum tempus velirit quam malesuada diam in fringilla purus accumsan exact original aliquam.</h3>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/images/img3.jpg" alt="Third slide">
-                                <p>"Aenean vehicula neque turpis at dictum purus malesuada Aenean risus"</p>
-                                <h3>Donec eget cursus libero vivamus sceler pellentes suscipit neque dictum tempus velirit quam malesuada diam in fringilla purus accumsan exact original aliquam.</h3>
+            <div class="sliders">
+                <div class="row">
+                    <div class="col">
+                        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="order-6 rounded-circle" src="assets/images/img1.jpg" alt="First slide">
+                                    <p>"Aenean vehicula neque turpis at dictum purus malesuada Aenean risus"</p>
+                                    <h3>Donec eget cursus libero vivamus sceler pellentes suscipit neque dictum tempus velirit quam malesuada diam in fringilla purus accumsan exact original aliquam.</h3>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="order-6  rounded-circle" src="assets/images/img2.jpg" alt="Second slide">
+                                    <p>"Aenean vehicula neque turpis at dictum purus malesuada Aenean risus"</p>
+                                    <h3>Donec eget cursus libero vivamus sceler pellentes suscipit neque dictum tempus velirit quam malesuada diam in fringilla purus accumsan exact original aliquam.</h3>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="order-6 rounded-circle" src="assets/images/img3.jpg" alt="Third slide">
+                                    <p>"Aenean vehicula neque turpis at dictum purus malesuada Aenean risus"</p>
+                                    <h3>Donec eget cursus libero vivamus sceler pellentes suscipit neque dictum tempus velirit quam malesuada diam in fringilla purus accumsan exact original aliquam.</h3>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="images">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                        <img src="assets/images/1.png" alt="Icon">
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                        <img src="assets/images/2.png" alt="Icon">
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                        <img src="assets/images/3.png" alt="Icon">
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                        <img src="assets/images/4.png" alt="Icon">
                     </div>
                 </div>
             </div>
@@ -298,13 +316,141 @@
     </section>
     <!-- Testimonial Section Ends
     ============================= -->
+
+    <!-- About Us Section Starts
+    ============================ -->
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="title-div">
+                        <h2 class="title">
+                            About Us
+                        </h2>
+                        <p>Molestie augue a gravida vestibulum ante in faucibus orci luctus ultrices posuere aliquet vestibulum tincidunt Interdum malesuada faucibus.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex align-items-center">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                    <div class="image">
+                        <img src="assets/images/img-4.png" alt="image 4">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                    <div class="texts">
+                        <h3>We're lightan Modern And High Software</h3>
+                        <p>But in certain circumstances and owing to the claims duty or the obligations business it will frequently occur that pleasures have to be repudiated and annoyances accepted.</p>
+                        <i class="fas fa-unlock-alt"></i> 
+                        &nbsp;
+                        <span>Idea of denouncing pleasure and praising.</span>
+                        <br>
+                        <i class="fas fa-calendar"></i>
+                        &nbsp;
+                        <span>Cases are perfectly simple eleifend and distinguish.</span>
+                        <br>
+                        <i class="fas fa-donate"></i>
+                        &nbsp;
+                        <span>Morbi fermentum scelerisque.</span>
+                    </div>
+                    <div class="buttons">
+                        <button class="btn btn-outline-primary">See About</button>
+                        &nbsp;
+                        <button class="btn btn-outline-secondary">Learn More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- About Us Section Ends
+    ========================== -->
+
+    <!-- Video Section Starts 
+    ========================= -->
+    <section id="video-section">
+        <div class="container">
+            <div class="wrapper">
+                <h3>Best app in the market available now</h3>
+                <p>Lightan watch video</p>
+                <i class="fas fa-play"></i>
+            </div>
+        </div>
+    </section>
+    <!-- Video Section Ends 
+    ======================= -->
+
+    <!-- BLog Section Starts
+    ======================== -->
+    <section id="blog-section">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="title-div">
+                        <h2 class="title">
+                                From The BLog
+                        </h2>
+                        <p>Molestie augue a gravida vestibulum ante in faucibus orci luctus ultrices posuere aliquet vestibulum tincidunt Interdum malesuada faucibus.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                    <div class="card custom-card" style="width: 100%;">
+                        <img class="card-img-top" src="assets/images/img-1.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Curabitur maximus tincidunt sem eget tempor.</h5>
+                            <p class="card-text">Mauris dignissim commodo libero rutrum proin dignissim massa bibendum magna trance vitae lobortis ligula accumsan egestas.</p>
+                            <a href="#" class="text-primary">View Details &nbsp; <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                    <div class="card custom-card" style="width: 100%;">
+                        <img class="card-img-top" src="assets/images/img-2.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Phasellus egestas imperdiet nisi non sollicitudin.</h5>
+                            <p class="card-text">Popularised in the 1960s with the release letraet sheets containing in more recently with desktop publishing software versions.</p>
+                            <a href="#" class="text-primary">View Details &nbsp; <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                    <div class="card custom-card" style="width: 100%;">
+                        <img class="card-img-top" src="assets/images/img-3.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Aenean dapibus nibh nulla feugiat sem pellentesque</h5>
+                            <p class="card-text">Because pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences painful.</p>
+                            <a href="#" class="text-primary">View Details &nbsp; <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Blog Section Ends
+    ====================== -->
+
+    <!-- Footer Starts 
+    ================== -->
+    <footer>
+        <div class="container">
+            <div class="row text-center d-flex align-items-center">
+                <div class="col">
+                    <p>2019 &copy;All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Ends
+    ================ -->
+
     
     <!-- Font Awesome JS -->
     <script src="assets/js/all.min.js"></script>
     <!-- WOW JS -->
     <script src="assets/js/wow.min.js"></script>
     <!-- jQuery JS -->
-    <script src="assets/js/jQuery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script
     <!-- jQuery UI -->
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <!-- Waypoints CDN -->
