--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <div class="container">
             <div class="row text-center d-flex align-items-center">
                 <div class="col">
-                    <p>2019 &copy;All Rights Reserved</p>
+                    <p>&copy;2019 All Rights Reserved</p>
                 </div>
             </div>
         </div>
