--- a/index.html
+++ b/index.html
@@ -275,22 +275,38 @@
                 <div class="col">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="assets/images/img1.jpg" alt="First slide">
+                            <div class="carousel-item active slider">
+                                <img class="w-100 .order-6" src="assets/images/img1.jpg" alt="First slide">
                                 <p>"Aenean vehicula neque turpis at dictum purus malesuada Aenean risus"</p>
                                 <h3>Donec eget cursus libero vivamus sceler pellentes suscipit neque dictum tempus velirit quam malesuada diam in fringilla purus accumsan exact original aliquam.</h3>
                             </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/images/img2.jpg" alt="Second slide">
+                            <div class="carousel-item slider">
+                                <img class="w-100 .order-6" src="assets/images/img2.jpg" alt="Second slide">
                                 <p>"Aenean vehicula neque turpis at dictum purus malesuada Aenean risus"</p>
                                 <h3>Donec eget cursus libero vivamus sceler pellentes suscipit neque dictum tempus velirit quam malesuada diam in fringilla purus accumsan exact original aliquam.</h3>
                             </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/images/img3.jpg" alt="Third slide">
+                            <div class="carousel-item slider">
+                                <img class="w-100 .order-6" src="assets/images/img3.jpg" alt="Third slide">
                                 <p>"Aenean vehicula neque turpis at dictum purus malesuada Aenean risus"</p>
                                 <h3>Donec eget cursus libero vivamus sceler pellentes suscipit neque dictum tempus velirit quam malesuada diam in fringilla purus accumsan exact original aliquam.</h3>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="images">
+                <div class="row">
+                    <div class="col-md-3 col-lg-3 col-sm-12 col-12">
+                        <img src="assets/images/1.png" alt="logo">
+                    </div>
+                    <div class="col-md-3 col-lg-3 col-sm-12 col-12">
+                        <img src="assets/images/2.png" alt="logo">
+                    </div>
+                    <div class="col-md-3 col-lg-3 col-sm-12 col-12">
+                        <img src="assets/images/3.png" alt="logo">
+                    </div>
+                    <div class="col-md-3 col-lg-3 col-sm-12 col-12">
+                        <img src="assets/images/4.png" alt="logo">
                     </div>
                 </div>
             </div>
