--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
     <section class="banner-section">
         <div class="container">
             <div class="row d-flex align-items-center">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12 wow fadeInLeft animated">
                     <div class="text">
                         <h1>Make your business reach the highest level with Lightan</h1>
                         <h5>Sodales fusce vehicula nisl sed metus rutrum id placerat odio sodale faucibus luscipit maecenas volutpat ultricies sodales Nullam vitae metus purus rhoncus ligula.</h5>
                         <button class="btn btn-outline-primary">Sign up free</button>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12 wow fadeInRight animated">
                     <div class="image">
                         <img src="assets/images/img-1.png" alt="Image 1">
                     </div>
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="title-div">
+                    <div class="title-div wow fadeInUp animated">
                         <h2 class="title">
                             Our Features
                         </h2>
@@ -106,10 +106,10 @@
             </div>
             <div class="row-1">
                 <div class="row">
-                    <div class="col-md-6 col-lg-6 col-sm-12 col-12 order-lg-6 order-md-6">
+                    <div class="col-md-6 col-lg-6 col-sm-12 col-12 order-lg-6 order-md-6 wow fadeInRight animated">
                         <img src="assets/images/img-2.png" alt="Image 2">
                     </div>
-                    <div class="col-md-6 col-lg-6 col-sm-12 col-12">
+                    <div class="col-md-6 col-lg-6 col-sm-12 col-12 wow fadeInLeft animated">
                         <div class="text">
                             <span class="text-primary">1.</span>
                             <h2>This is Improve Your Marketing business</h2>
@@ -121,10 +121,10 @@
             </div>
             <div class="row-2">
                 <div class="row">
-                    <div class="col-md-6 col-lg-6 col-sm-12 col-12">
+                    <div class="col-md-6 col-lg-6 col-sm-12 col-12 wow fadeInLeft animated">
                         <img src="assets/images/img-3.png" alt="Image 3">
                     </div>
-                    <div class="col-md-6 col-lg-6 col-sm-12 col-12">
+                    <div class="col-md-6 col-lg-6 col-sm-12 col-12 wow fadeInRight animated">
                         <div class="text">
                             <span class="text-primary">2.</span>
                             <h2>This Is Increase Your Marketing Performance</h2>
@@ -143,13 +143,13 @@
     ============================ -->
     <section id="services">
         <div class="container">
-            <div class="title-div">
+            <div class="title-div wow fadeInUp animated">
                 <h2 class="title">
                     Our Services
                 </h2>
                 <p>Molestie augue a gravida vestibulum ante in faucibus orci luctus ultrices posuere aliquet vestibulum tincidunt Interdum malesuada faucibus.</p>
             </div>
-            <div class="row">
+            <div class="row wow pulse animated">
                 <div class="col-md-6 col-sm-12 col-lg-4 col-12">
                     <div class="wrapper">
                         <div class="icon">
@@ -181,7 +181,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row wow pulse animated">
                 <div class="col-md-6 col-sm-12 col-lg-4 col-12">
                     <div class="wrapper">
                         <div class="icon">
@@ -223,28 +223,28 @@
     <section id="counter">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-12 wow fadeInLeft animated">
                     <div class="wrapper">
                         <i class="fas fa-users"></i>
                         <span class="counter">10</span>
                         <h4>Years of Operation</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-12 wow fadeInLeft animated">
                     <div class="wrapper">
                         <i class="fas fa-thumbs-up"></i>
                         <span class="counter">1500+</span>
                         <h4>Happy Customers</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-12 wow fadeInRight animated">
                     <div class="wrapper">
                         <i class="fas fa-code"></i>
                         <span class="counter">180+</span>
                         <h4>Team Members</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                <div class="col-lg-3 col-md-3 col-sm-12 col-12 wow fadeInRight animated">
                     <div class="wrapper">
                         <i class="fas fa-trophy"></i>
                         <span class="counter">15</span>
@@ -263,7 +263,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="title-div">
+                    <div class="title-div wow animated fadeInUp">
                         <h2 class="title">
                             Our Testimonial
                         </h2>
@@ -297,7 +297,7 @@
                 </div>
             </div>
             <div class="images">
-                <div class="row">
+                <div class="row wow pulse animated">
                     <div class="col-lg-3 col-md-3 col-sm-12 col-12">
                         <img src="assets/images/1.png" alt="Icon">
                     </div>
@@ -323,7 +323,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="title-div">
+                    <div class="title-div wow animated fadeInUp">
                         <h2 class="title">
                             About Us
                         </h2>
@@ -332,12 +332,12 @@
                 </div>
             </div>
             <div class="row d-flex align-items-center">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12 wow animated fadeInLeft">
                     <div class="image">
                         <img src="assets/images/img-4.png" alt="image 4">
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-12 wow animated fadeInRight">
                     <div class="texts">
                         <h3>We're lightan Modern And High Software</h3>
                         <p>But in certain circumstances and owing to the claims duty or the obligations business it will frequently occur that pleasures have to be repudiated and annoyances accepted.</p>
@@ -369,10 +369,14 @@
     ========================= -->
     <section id="video-section">
         <div class="container">
-            <div class="wrapper">
-                <h3>Best app in the market available now</h3>
-                <p>Lightan watch video</p>
-                <i class="fas fa-play"></i>
+            <div class="row">
+                <div class="col">
+                    <div class="wrapper wow animated fpulse">
+                        <h3>Best app in the market available now</h3>
+                        <p>Lightan watch video</p>
+                        <i class="fas fa-play"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -385,7 +389,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="title-div">
+                    <div class="title-div wow animated fadeInUp">
                         <h2 class="title">
                                 From The BLog
                         </h2>
@@ -394,7 +398,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12 wow afadeInLeft animated">
                     <div class="card custom-card" style="width: 100%;">
                         <img class="card-img-top" src="assets/images/img-1.jpg" alt="Card image cap">
                         <div class="card-body">
@@ -404,7 +408,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12 wow fadeInUp animated">
                     <div class="card custom-card" style="width: 100%;">
                         <img class="card-img-top" src="assets/images/img-2.jpg" alt="Card image cap">
                         <div class="card-body">
@@ -414,7 +418,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12 wow fadeInRight animated">
                     <div class="card custom-card" style="width: 100%;">
                         <img class="card-img-top" src="assets/images/img-3.jpg" alt="Card image cap">
                         <div class="card-body">
@@ -450,13 +454,7 @@
     <!-- WOW JS -->
     <script src="assets/js/wow.min.js"></script>
     <!-- jQuery JS -->
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script
-    <!-- jQuery UI -->
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-    <!-- Waypoints CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <!-- Counter Up CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+    <script src="assets/js/jQuery.min.js"></script></script>
     <!-- Popper JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
